# MeRNSTA

./: README.md
agents/: evolution_tree.py  strategy_optimizer.py
benchmarks/: performance_suite.py
config/: reloader.py  settings.py
configs/: Dockerfile  config.yaml  docker-compose.yml  package-lock.json  pyproject.toml  pytest.ini  requirements.txt  sovereign_config.yaml
cortex/: conversation.py  engine.py  memory_ops.py  personality_ops.py  ppo_tuner.py
data/: schema_dump.sql  strategy_performance.jsonl
docs/: LICENSE  OLLAMA_SETUP_SUMMARY.md  PHASE22_COMPLETION_SUMMARY.md  QUICK_START.md  README.md  SYSTEM.md  info.txt
scripts/: cortex.py  embedder.py  install.py  main.py  start_enterprise.py  start_os_mode.sh  validate_os_integration.py
storage/: audit_logger.py  db.py  fact_manager.py  memory_compression.py  memory_log.py  memory_utils.py  phase2_cognitive_system.py  plan_memory.py
system/: self_update_manager.py  sovereign_crypto.py
tests/: test_contrad.py  test_enterprise_features.py
vector_memory/: config.py  hybrid_memory.py
